# demo

./: .dockerignore  .gitignore  C:\Home\Documents\demoekz\demo\Dockerfile  Dockerfile  algorithm_description.txt  main.py  pyproject.toml
buildmatapp/: apps.py  models.py  urls.py  views.py
buildmatapp/migrations/: 0001_initial.py
config/: settings.py  urls.py
import/: .~lock.user_import.xlsx#
k8s/: app-config.yaml  app-deployment.yaml  app-ingress.yaml  app-service.yaml  postgres.yaml  redis.yaml
k8s-manifests/: README.md
k8s-manifests/configmaps/: app-config.yaml
k8s-manifests/deployments/: django-deployment.yaml  nginx-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml
k8s-manifests/ingress/: app-ingress.yaml
k8s-manifests/jobs/: import-data-job.yaml
k8s-manifests/pvcs/: postgres-pvc.yaml
k8s-manifests/secrets/: app-secrets.yaml
k8s-manifests/services/: django-service.yaml  nginx-service.yaml  postgres-service.yaml  redis-service.yaml
src/buildmatapp/: apps.py
src/config/: asgi.py  settings.py  wsgi.py
templates/: base.html
templates/buildmatapp/: calculate.html  login.html  order_form.html  order_list.html  product_form.html  product_list.html  register.html
