[project]
name = "buildmaterials"
version = "0.1.0"
description = "Buildmaterials Django Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
    "redis>=8.0.0",
    "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
